--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "ejs": "~2.5.6",
+    "debug": "^2.6.8",
+    "dotenv": "^4.0.0",
+    "ejs": "^2.5.7",
     "express": "~4.15.2",
+    "method-override": "^2.3.9",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
     "nodemon": "^1.12.0",
