--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^4.0.0",
     "ejs": "^2.5.7",
     "express": "~4.15.2",
+    "jsonwebtoken": "^8.0.0",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
